# metadata-transformation-service

./: .gitignore  Dockerfile  README.md  docker-build.sh  pyproject.toml
conf/: settings.toml
resources/obsulates/ohsmart/: ohsmart-form-metadata-to-json-priv-v61.xsl  ohsmart-form-metadata-to-json-pub-v61.xsl  ohsmart-form-metadata-to-json-pub-v61A.xsl  ohsmart-form-metadata-to-text-priv-v6.xsl  ohsmart-form-metadata-to-text-pub-v6.xsl  ohsmart-form-metadata-to-text-pub-v6A.xsl
resources/saved-xsl/faircore4eosc/: fc4eosc-form-metadata-to-dataverse-dataset-v2a.xsl  fc4eosc-form-metadata-to-swd-sword-v2.xsl
resources/saved-xsl/ohsmart/: ohsmart-form-metadata-to-DV-commons.xsl  ohsmart-form-metadata-to-DV-files-v1.xsl  ohsmart-form-metadata-to-DV-metadata-v3.xsl  ohsmart-form-metadata-to-DV-metadata-v5.xsl  ohsmart-form-metadata-to-DV-metadata-v6.xsl  ohsmart-form-metadata-to-DV-metadata-vOHCore-v2.xsl  ohsmart-form-metadata-to-json-all-v2a.xsl  ohsmart-form-metadata-to-json-all-v6.xsl  ohsmart-form-metadata-to-json-priv-v6.xsl  ohsmart-form-metadata-to-json-priv-v61.xsl  ohsmart-form-metadata-to-json-priv-v61A.xsl  ohsmart-form-metadata-to-json-priv-vOHCore-v2.xsl  ohsmart-form-metadata-to-json-pub-v6.xsl  ohsmart-form-metadata-to-json-pub-v61.xsl  ohsmart-form-metadata-to-json-pub-vOHCore-v2.xsl  ohsmart-form-metadata-to-json-public-v6.xsl  ohsmart-form-metadata-to-text-priv-v6.xsl  ohsmart-form-metadata-to-text-priv-v6A.xsl  ohsmart-form-metadata-to-text-priv-vOHCore-v2.xsl  (+4 more)
src/: main.py
src/mts/: commons.py  protected.py  public.py
